--- a/dbz/package.json
+++ b/dbz/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.4",
+    "react-jinke-music-player": "^4.24.2",
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
